# GenPwd

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pax/genpwd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pax/genpwd/: CustomEditText.java  GenPwdApp.java  MainActivity.java
app/src/main/java/com/pax/genpwd/jni/: Sha1Utils.java
app/src/main/java/com/pax/genpwd/utils/: Density.java  ToastUtils.java  Utils.java
app/src/main/jni/: Android.mk  com_pax_genpwd_jni_Sha1Utils.h  sha1.cpp  sha1.h
app/src/main/res/drawable/: card_foreground_selector.xml  rect_et_bg.xml  rect_toast_bg.xml
app/src/main/res/drawable-v21/: card_foreground.xml  card_foreground_selector.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/com/pax/genpwd/: ExampleUnitTest.java  UtilsTest.java
gradle/wrapper/: gradle-wrapper.properties
library_calendarview/: build.gradle
